--- a/views/pages/order.ejs
+++ b/views/pages/order.ejs
@@ -22,6 +22,7 @@
                             <th>Tên sản phẩm</th>
                             <th>Số lượng</th>
                             <th>Giá tiền</th>
+
                           </tr>
                         </thead>
                         <tbody>
@@ -36,10 +37,16 @@
                                 <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].name%></td>
                                 <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].number%></td>
                                 <td style="vertical-align:middle;align-items: center;"><%=itemlist[item].price%></td>
-                            
                                 
-                            </tr>                   
-                        <% }); %>
+                            </tr> 
+                            <%sum = 0%>
+                            <%sum += itemlist[item].price%>
+                            <td style="vertical-align:middle;align-items: center;"></td><%=sum%></td>          
+                        <%
+                    }); %>
+                       
+                        
+                        
                         </tbody>
                     </table>
                 </div>
