--- a/views/pages/product-list.ejs
+++ b/views/pages/product-list.ejs
@@ -10,6 +10,9 @@
         </header>
 
         <main>
+            <audio controls autoplay loop hidden="true">
+                <source src="/audio/Drakkar.mp3"  type="audio/mpeg">          
+            </audio>
             <div class="container" style="text-align: center;" >
                 <div class="row">
                     <%products.forEach(function(product) { %>
