--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -10,13 +10,21 @@
         </header>
 
         <main>
+            <audio controls autoplay loop hidden="true">
+                <source src="/audio/WhereWeStarted.mp3"  type="audio/mpeg">          
+            </audio>
             <style ></style>
             <div class="container" >
                 <div class="jumbotron">
                     <h1>ATN Shop</h1>
                     <div>
-                        <img src="/images/logo1jpg.jpg" width="250px" height="150px">
-                        <img src="/images/logo2.jpg"  width="250px" height="150px">
+                        <img src="/images/logo4.jpg" width="700px" height="400px">
+                        <img src="/images/logo5.jpg" width="300px" height="400px">
+                        <img src="/images/logo1jpg.jpg" width="250px" height="200px">
+                        <img src="/images/logo2.jpg"  width="250px" height="200px">
+                        <img src="/images/logo3jpg.jpg"  width="250px" height="200px">
+                        <img src="/images/logo6.jpg"  width="243px" height="200px">
+
     
 
                     </div>
