--- a/views/pages/product-one.ejs
+++ b/views/pages/product-one.ejs
@@ -7,7 +7,8 @@
         <h5 class="card-title"><%=product.id%> : <%=product.name%></h5>
         <p class="card-text">Price: <%=product.price%> </p>
         <p class="card-text">Information: <%=product.information%> </p>
-        <a href="/product/<%=product.id%>" class="btn btn-primary">view details - <%=product.id%></a>
+        <!-- <a href="/product/<%=product.id%>" class="btn btn-primary">view details - <%=product.id%></a> -->
+        <button style="background-color: deepskyblue;" type="submit" class="btn btn-primary">View Dtails</button>
         <button type="submit" class="btn btn-success" onclick="add_to_cart('<%=product.id%>' , '<%=product.name%>', '<%=product.price%>')"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
         </div>
     </div>
