--- a/views/pages/payment.ejs
+++ b/views/pages/payment.ejs
@@ -10,7 +10,7 @@
         </header>
 
         <main>
-    <form action='/report' method='GET' style="background-image: url();background-color: cadetblue;padding-bottom:10px;padding-right:50px;padding-left:100px;width: 1520px;height: 635px;border: 1px solid gainsboro;margin-top: 5px;margin-left:10px;">
+    <form action='/report' method='GET' style="background-image: url();background-color: white;padding-bottom:10px;padding-right:50px;padding-left:100px;width: 1520px;height: 635px;border: 1px solid gainsboro;margin-top: 5px;margin-left:10px;">
            <div class="main" style="display: block;">
             <%alls.slice(1,).forEach(myFunction);%>
             <%function myFunction(item) {%>
@@ -33,7 +33,7 @@
                 <h4>Tổng: <%=sum%></h4>
             </br>
            </div>
-           <div class="container" style="width: 800px;height: 400px;;margin-top: -450px;margin-left: 300px;background-color: bisque;">
+           <div class="container" style="width: 800px;height: 400px;;margin-top: -450px;margin-left: 300px;background-color: cyan;">
             <div class='form-group'>
                 <label>Ngân hàng</label> 
                 <select style="width: 200px;" class='form-control' id='bankCode' name='bankCode'>
