--- a/views/pages/order.ejs
+++ b/views/pages/order.ejs
@@ -23,7 +23,7 @@
                                 <th>Số lượng</th>
                                 <th>Giá tiền</th>
                                 <th>Tổng cộng</th>
-                                <th>Chọn mua</th>
+                                <th>Chọn mua sản phẩm</th>
                             </tr>
                             </thead>
                             <tbody>
