--- a/views/pages/payment.ejs
+++ b/views/pages/payment.ejs
@@ -21,7 +21,7 @@
               <labe>Sản phẩm :<%=a[1]%></label></br>
               <label style="margin-top: 10px;">Giá sản phẩm :<%=a[3]%></label></br>
               <label>Số lượng :<%=a[2]%></label></br>
-              <label>Số lượng * Giá :<%=a[4]%></label></br>
+              <label>Số Tiền :<%=a[4]%></label></br>
 
             <%}%>  
             <%sum = 0;i = 0%>
